Add Cloudflare integration for fixed IP and custom domain

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,11 @@ INITIAL_BALANCE=100000
 MAX_ACCOUNT_RISK_PER_TRADE=0.05
 LIQUIDATION_PROBABILITY=0.07
 MAX_LEVERAGE=125
+
+# Cloudflare Settings
+USE_CLOUDFLARE=true
+CLOUDFLARE_API_TOKEN=your_cloudflare_api_token
+CLOUDFLARE_ZONE_ID=your_zone_id
+CLOUDFLARE_TUNNEL_TOKEN=your_tunnel_token
+CUSTOM_DOMAIN=api.your-domain.com
+RAILWAY_PUBLIC_DOMAIN=your-app.railway.app
