Add automated optimization system with weekly scheduling

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,10 @@ CLOUDFLARE_ZONE_ID=your_zone_id
 CLOUDFLARE_TUNNEL_TOKEN=your_tunnel_token
 CUSTOM_DOMAIN=api.your-domain.com
 RAILWAY_PUBLIC_DOMAIN=your-app.railway.app
+
+# Auto Optimization Settings
+ENABLE_AUTO_OPTIMIZATION=true
+OPTIMIZATION_SCHEDULE=weekly
+RESOURCE_LIMIT_CPU=0.7
+RESOURCE_LIMIT_MEMORY=0.7
+OPTIMIZATION_TIMEZONE=Asia/Seoul
