--- a/requirements.txt
+++ b/requirements.txt
@@ -12,5 +12,11 @@ matplotlib>=3.5.0
 seaborn>=0.11.0
 scikit-learn>=1.1.0
 
+# 자동 최적화용 라이브러리
+optuna>=3.0.0
+apscheduler>=3.9.0
+pytz>=2023.3
+psutil>=5.9.0
+
 # 비동기 처리
 asyncio
