워크포워드 테스트 완료 및 시스템 활성화
 주요 변경사항:
- 워크포워드 테스트 구현 및 최적화 완료
- 검증된 최적 파라미터 적용 (100% 일관성 달성)
- Cloudflare 관련 코드 및 파일 완전 제거
- Railway Static IP 직접 연결로 변경
- 실전 거래 모드 활성화 (BINANCE_TESTNET=false)
- 불필요한 임시 파일들 정리

 기술적 개선:
- 3단계 베이지안 최적화 + 워크포워드 검증
- 동적 시장 조건 분석 및 목표값 조정
- 파라미터 안정성 검사 추가
- JSON 직렬화 오류 수정

 제거된 파일들:
- Cloudflare 관련 설정 및 문서
- 임시 테스트 결과 파일들
- 사용하지 않는 가이드 문서들
- 디버그 및 임시 스크립트들

--- a/.gitignore
+++ b/.gitignore
@@ -54,9 +54,26 @@ temp/
 *.png
 *.jpg
 *.jpeg
-*.csv
-*.json
 *.pkl
+
+# 임시 테스트 및 결과 파일들
+*_result_*.json
+*_test_*.json
+*_check_*.json
+*_monitor_*.json
+binance_test_*.json
+railway_*_*.json
+update_params_*.py
+fix_*.py
+debug_*.py
+temp_*.py
+
+# 최적화 결과 (최신 것만 유지)
+optimization_result_*.json
+!optimization_result_latest.json
+
+# 파라미터 히스토리
+parameters_history.json
 
 # 데이터 파일 (용량이 큰 경우)
 data/*.csv
