fix: CI/CD 설정 수정 - Python 버전 및 보안 스캔 도구 수정

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.9, 3.10, 3.11]
+        python-version: ["3.9", "3.10", "3.11"]
 
     steps:
     - uses: actions/checkout@v4
@@ -76,7 +76,7 @@ jobs:
     - name: Set up Python 3.11
       uses: actions/setup-python@v4
       with:
-        python-version: 3.11
+        python-version: "3.11"
     
     - name: Install dependencies
       run: |
@@ -97,13 +97,20 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     
-    - name: Run Bandit Security Scan
-      uses: securecodewarrior/github-action-bandit@v1
+    - name: Set up Python 3.11
+      uses: actions/setup-python@v4
       with:
-        path: src
-        level: medium
-        confidence: medium
-        exit_zero: true
+        python-version: "3.11"
+    
+    - name: Install bandit
+      run: |
+        python -m pip install --upgrade pip
+        pip install bandit[toml]
+    
+    - name: Run Bandit Security Scan
+      run: |
+        bandit -r src -f json -o bandit-report.json || true
+        bandit -r src
 
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -116,7 +123,7 @@ jobs:
     - name: Set up Python 3.11
       uses: actions/setup-python@v4
       with:
-        python-version: 3.11
+        python-version: "3.11"
     
     - name: Install dependencies
       run: |
