--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,16 @@
-# 바이낸스 데이터 수집을 위한 필수 라이브러리
-requests>=2.28.0
-pandas>=1.5.0
-python-dotenv>=0.19.0
-numpy>=1.21.0
-
-# 실시간 거래를 위한 바이낸스 API
-python-binance>=1.0.19
-
-# 기존 트레이딩 전략용 라이브러리
-matplotlib>=3.5.0
-seaborn>=0.11.0
-scikit-learn>=1.1.0
-
-# 자동 최적화용 라이브러리
-optuna>=3.0.0
-apscheduler>=3.9.0
-pytz>=2023.3
-psutil>=5.9.0
-
-# 비동기 처리
-asyncio
+numpy==1.24.3
+pandas==2.0.3
+schedule==1.2.0
+requests==2.31.0
+python-dotenv==1.0.0
+fastapi==0.103.1
+uvicorn==0.23.2
+pydantic==2.3.0
+aiofiles==23.2.1
+python-multipart==0.0.6
+scipy==1.11.1
+scikit-learn==1.3.0
+optuna==3.3.0
+pytz==2023.3
+psutil==5.9.5
+python-binance==1.0.19
